--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Búsqueda RC + GetFeatureInfo Catastro</title>
+<title>RC + GetFeatureInfo (Catastro)</title>
 <style>
   body{font-family:system-ui,Segoe UI,Arial;margin:16px}
   .row{display:flex;gap:8px;align-items:center}
@@ -11,11 +11,12 @@
   #estado{margin-top:10px;color:#555}
   #resumen{margin-top:12px;padding:10px;border:1px solid #e5e7eb;border-radius:10px;background:#fafafa;display:none}
   #html{margin-top:8px;border:1px dashed #ddd;padding:10px;border-radius:8px;background:#fff;max-height:360px;overflow:auto}
+  #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
 <h3>Búsqueda por Referencia Catastral (RC)</h3>
 <div class="row">
-  <input id="refcat" type="text" placeholder="Ej: 1234567AB1234C0001DE" pattern="[A-Za-z0-9]{14,25}" required>
+  <input id="refcat" type="text" placeholder="Ej: 25057A00500045 ó 1234567AB1234C0001DE" pattern="[A-Za-z0-9]{10,25}" required>
   <button id="btnBuscar">Buscar</button>
 </div>
 <div id="estado"></div>
@@ -24,11 +25,16 @@
   <summary>Ver respuesta completa GetFeatureInfo (HTML)</summary>
   <div id="html"></div>
 </details>
+<details>
+  <summary>Depuración</summary>
+  <div id="debug"></div>
+</details>
 
 <script>
 (function(){
-  const useProxy = true; // activa proxy si CORS falla
-  const proxy = 'https://thingproxy.freeboard.io/fetch/';
+  // Deja el proxy activado mientras pruebas desde GitHub Pages
+  const useProxy = true;
+  const proxy = 'https://thingproxy.freeboard.io/fetch/'; // solo pruebas
 
   const wrap = url => useProxy ? (proxy + encodeURI(url)) : url;
   const btn = document.getElementById('btnBuscar');
@@ -36,6 +42,7 @@
   const estado = document.getElementById('estado');
   const htmlDiv = document.getElementById('html');
   const resumenDiv = document.getElementById('resumen');
+  const debugDiv = document.getElementById('debug');
   const setEstado = t => estado.textContent = t || '';
 
   async function fetchText(url){
@@ -45,8 +52,8 @@
   }
 
   function parseXY(xml){
-    const x = (xml.match(/<xcen>(.*?)<\/xcen>/i)||[])[1];
-    const y = (xml.match(/<ycen>(.*?)<\/ycen>/i)||[])[1];
+    const x = (xml.match(/<xcen>(.*?)<\/xcen>/i)||[])[1]; // lon
+    const y = (xml.match(/<ycen>(.*?)<\/ycen>/i)||[])[1]; // lat
     return (x&&y)?{x:parseFloat(x),y:parseFloat(y)}:null;
   }
 
@@ -57,4 +64,76 @@
     const mMuni = text.match(/(Municipio|Municipality|locality)\s*[:=]\s*([A-ZÁÉÍÓÚÜÑa-záéíóúüñ\.\-\s]+)/);
     const mSup = text.match(/(Área|Superficie|Area)\s*[:=]\s*([\d\.,]+\s*(m²|m2)?)/i);
     let out='';
-    if(mRC) out+=`<div><b>RC:</b> ${mRC
+    if(mRC) out+=`<div><b>RC:</b> ${mRC[2]}</div>`;
+    if(mMuni) out+=`<div><b>Municipio:</b> ${mMuni[2].trim()}</div>`;
+    if(mSup) out+=`<div><b>Superficie:</b> ${mSup[2]}</div>`;
+    return out;
+  }
+
+  // Devuelve la URL para localizar por RC (admite 14 o 20 caracteres)
+  function buildRcLocatorUrl(rc){
+    // Servicio de "Datos no protegidos". Admite RC de 14 (parcela) o 20 (inmueble)
+    return 'https://ovc.catastro.meh.es/OVCServWeb/OVCWcfCallejero/COVCCallejero.svc/Consulta_DNPRC?RC='
+           + encodeURIComponent(rc);
+  }
+
+  async function buscar(){
+    const rc = (inp.value||'').trim();
+    if(!rc){ setEstado('Introduce una referencia catastral.'); return; }
+    htmlDiv.innerHTML=''; resumenDiv.style.display='none'; debugDiv.textContent=''; setEstado('Localizando coordenadas…');
+
+    try{
+      // 1) Coordenadas por RC (centroide ETRS89 lon/lat)
+      const urlCoords = buildRcLocatorUrl(rc);
+      const xml = await fetchText(urlCoords);
+      const xy = parseXY(xml);
+      if(!xy){ setEstado('No se han obtenido coordenadas para esa RC. Revisa el valor.'); return; }
+
+      // 2) BBOX alrededor del punto (usaremos WMS 1.1.1 con SRS=EPSG:4258: lon,lat)
+      const delta=0.0003; // ~30m
+      const minx=(xy.x-delta).toFixed(6), miny=(xy.y-delta).toFixed(6);
+      const maxx=(xy.x+delta).toFixed(6), maxy=(xy.y+delta).toFixed(6);
+
+      // 3) GetFeatureInfo (WMS 1.1.1 => usa SRS y orden lon,lat)
+      setEstado('Consultando WMS GetFeatureInfo…');
+      const wmsBase='https://ovc.catastro.meh.es/cartografia/INSPIRE/spadgcwms.aspx';
+      const params=new URLSearchParams({
+        SERVICE:'WMS',
+        VERSION:'1.1.1',
+        REQUEST:'GetFeatureInfo',
+        LAYERS:'CP.CadastralParcel',
+        QUERY_LAYERS:'CP.CadastralParcel',
+        SRS:'EPSG:4258',
+        BBOX:`${minx},${miny},${maxx},${maxy}`,
+        WIDTH:'101',
+        HEIGHT:'101',
+        X:'50',
+        Y:'50',
+        INFO_FORMAT:'text/html'
+      });
+      const wmsUrl = `${wmsBase}?${params.toString()}`;
+      const html = await fetchText(wmsUrl);
+
+      // 4) Mostrar
+      htmlDiv.innerHTML = html || '(Sin contenido)';
+      const resumen = extractSummaryFromHTML(html);
+      if(resumen){ resumenDiv.innerHTML = `<b>Resumen</b><br>${resumen}`; resumenDiv.style.display='block'; }
+      setEstado(`RC localizada en (${xy.x.toFixed(6)}, ${xy.y.toFixed(6)}).`);
+
+      // 5) Debug (útil si algo falla)
+      debugDiv.textContent = [
+        'URL coordenadas:', urlCoords,
+        '',
+        'URL GetFeatureInfo:', wmsUrl
+      ].join('\n');
+    }catch(e){
+      console.error(e);
+      setEstado('Error en la consulta (CORS o servicio no disponible).');
+    }
+  }
+
+  document.getElementById('btnBuscar').addEventListener('click',buscar);
+  document.getElementById('refcat').addEventListener('keydown',e=>{ if(e.key==='Enter') buscar(); });
+})();
+</script>
+</html>
