--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Búsqueda por Referencia Catastral (RC)</h3>
+<h3>Búsqueda por Referencia Catastral (RC):</h3>
 <div class="row">
   <input id="refcat" type="text" placeholder="Ej: 25057A00500045 ó 1234567AB1234C0001DE" pattern="[A-Za-z0-9]{10,25}" required>
   <button id="btnBuscar">Buscar</button>
