Fix heading tag for Catastral Reference search

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Búsqueda por Referencia Catastral (RC):</h3>
+<h3>Búsqueda por Referencia Catastral (RC)</h3>
 <div class="grid">
   <input id="prov" placeholder="Provincia (opcional) - p.ej. Lleida">
   <input id="muni" placeholder="Municipio (opcional) - p.ej. Almenar">
