--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Búsqueda por Referencia Catastral (RC)</h3>
+<h3>Búsqueda por Referencia Catastral (RC):</h3>
 <div class="grid">
   <input id="prov" placeholder="Provincia (opcional) - p.ej. Lleida">
   <input id="muni" placeholder="Municipio (opcional) - p.ej. Almenar">
@@ -103,7 +103,7 @@
 
     // 5) RCCOOR (ASMX) sin provincia/municipio (a veces no devuelve nada para 14)
     try{
-      const u = `https://ovc.catastro.meh.es/OVCServWeb/OVCSWLocalizacionRC/OVCSWLocalizacionRC.asmx/Consulta_RCCOOR?RC=${encodeURIComponent(rc)}&SRS=EPSG:4258`;
+      const u = `http://ovc.catastro.meh.es/INSPIRE/wfsCP.aspx?service=wfs&version=2&request=getfeature&STOREDQUERIE_ID=GetParcel&srsname=EPSG:4326&REFCAT=${encodeURIComponent(rc)}`;
       tried.push(u);
       const xml = await fetchText(u);
       const xy = tryParseXY(xml);
